--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -2,8 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Web-Tools</title>
+  <title>Web Tools</title>
+  <script type="text/javascript" src="/js/library/jquery-1.10.2.js"></script>
 </head>
 <body>
+    <?php echo $this->layout()->content; ?>
 </body>
 </html>
