--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -7,5 +7,8 @@
 </head>
 <body>
     <?php echo $this->layout()->content; ?>
+    <script type="text/javascript">
+        alert('layout phtml')
+    </script>
 </body>
 </html>
