1) Added Action Helpers to write logs 2) Updated Error Controller to set reponse 3) Updated comments in common-functions.js

--- a/application/modules/error/views/scripts/index/index.phtml
+++ b/application/modules/error/views/scripts/index/index.phtml
@@ -1,5 +1,4 @@
 <?php
-$error = $this->error;
-echo 'You have reached ' . $error['params']['error'] . ' page';
-http_response_code($error['params']['error']);
+$errorCode = $this->errorCode;
+echo 'You have reached ' . $errorCode . ' page';
 ?>
