Updated Error Handling

--- a/application/modules/socialNetwork/views/scripts/facebook/like.phtml
+++ b/application/modules/socialNetwork/views/scripts/facebook/like.phtml
@@ -1,1 +1,6 @@
 <script type="text/javascript" src="/js/facebook_like.js"></script>
+<button id="clickMe" onclick="onClickFunction()">Click Me</button>
+
+If you want to use a different view script than the default:
+
+$this->renderScript('/my-controller/my-view.phtml');
